@@ -55,6 +55,7 @@
 - im_bufjpeg2vips() has a "header_only" parameter
 - added vips_image_get_data()
 - updated German translation (thanks Chris)
+- fixed typo in im_conv() overflow estimation which could cause errors
 
 30/11/10 started 7.24.0
 - bump for new stable
